# octolinker-rust-test-cases

./: Cargo.toml  README.md
fake-lib/: Cargo.toml
src/: error.rs  main.rs
