[package]
name = "octolinker-rust-test-cases"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.0.1"
lazy_static = "1.4.0"
libc = "0.2.94"
minimad = "0.7.0"
once_cell = "1.7.2"
chrono = "0.4.19"
clap = {version = "2.33.3", default-features = false, features = ["suggestions", "color"]}
env_logger = "0.8.3"
error-chain = "0.12.4"
imap = "3.0.0-alpha.3"
lettre = "0.10.0-rc.1"
log = "0.4.14"
mailparse = "0.13.1"
native-tls = "0.2"
rfc2047-decoder = "0.1.2"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
terminal_size = "0.1.15"
toml = "0.5.8"
tree_magic = "0.2.3"
uuid = {version = "0.8", features = ["v4"]}
rand = { git = "https://github.com/rust-lang-nursery/rand" }
near-sdk = "3.1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.4"

[dev-dependencies]
unicode-width = "0.1.7"
slab = { version = "0.4.1" }
fake-lib = { version = "0.1", path = "./fake-lib" }

[build-dependencies]
pkg-config = "0.3.7"
cc = { version = "1.0.43", features = ['parallel'] }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.9", optional = true }
openssl = "0.10.33"
