[package]
name = "octolinker-rust-test-cases"
version = "0.1.0"
edition = "2018"

# RFC: should it link to the crate's doc page or repo url?

[dependencies]
bytes = "1.0.1"                                                  # @should link to https://docs.rs/bytes
lazy_static = "1.4.0"                                            # @should link to https://docs.rs/lazy_static
libc = "0.2.94"                                                  # @should link to https://docs.rs/libc
minimad = "0.7.0"                                                # @should link to https://docs.rs/minimad
once_cell = "1.7.2"                                              # @should link to https://docs.rs/once_cell
chrono = "0.4.19"                                                # @should link to https://docs.rs/chrono
clap = {version = "2.33.3", features = ["suggestions", "color"]} # @should link to https://docs.rs/clap
env_logger = "0.8.3"                                             # @should link to https://docs.rs/env_logger
error-chain = "0.12.4"                                           # @should link to https://docs.rs/error-chain
imap = "3.0.0-alpha.3"                                           # @should link to https://docs.rs/imap
lettre = "0.10.0-rc.1"                                           # @should link to https://docs.rs/lettre
log = "0.4.14"                                                   # @should link to https://docs.rs/log
mailparse = "0.13.1"                                             # @should link to https://docs.rs/mailparse
native-tls = "0.2"                                               # @should link to https://docs.rs/native-tls
rfc2047-decoder = "0.1.2"                                        # @should link to https://docs.rs/rfc2047-decoder
serde = {version = "1.0.118", features = ["derive"]}             # @should link to https://docs.rs/serde
serde_json = "1.0.61"                                            # @should link to https://docs.rs/serde_json
terminal_size = "0.1.15"                                         # @should link to https://docs.rs/terminal_size
toml = "0.5.8"                                                   # @should link to https://docs.rs/toml
tree_magic = "0.2.3"                                             # @should link to https://docs.rs/tree_magic
uuid = {version = "0.8", features = ["v4"]}                      # @should link to https://docs.rs/uuid
rand = { git = "https://github.com/rust-lang-nursery/rand" }     # @should link to https://github.com/rust-lang-nursery/rand
near-sdk = "3.1.0"                                               # @should link to https://docs.rs/near-sdk
tokio = { version = "1.0", features = ["full"] }                 # @should link to https://docs.rs/tokio
async-std = "1.4"                                                # @should link to https://docs.rs/async-std

[dev-dependencies]
unicode-width = "0.1.7"                                          # @should link to https://docs.rs/unicode-width
slab = { version = "0.4.1" }                                     # @should link to https://docs.rs/slab
fake-lib = { version = "0.1", path = "./fake-lib" }              # @should link to <CURRENT_PATH>/./fake-lib

[build-dependencies]
pkg-config = "0.3.7"                                             # @should link to https://docs.rs/pkg-config
cc = { version = "1.0.43", features = ['parallel'] }             # @should link to https://docs.rs/cc

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"                                                 # @should link to https://docs.rs/winapi

[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.9", optional = true }               # @should link to https://docs.rs/openssl-sys
openssl = "0.10.33"                                              # @should link to https://docs.rs/openssl
